# illust2psd

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: layer_taxonomy.yaml
illust2psd/: __init__.py  cli.py  config.py  pipeline.py
illust2psd/mcp_server/: server.py
illust2psd/models/: inpaint_model.py  model_manager.py  pose_model.py  seg_model.py
illust2psd/steps/: s1_preprocess.py  s2_foreground.py  s3_pose.py  s4_segment.py  s5_face.py  s6_inpaint.py  s7_compose.py  s8_export.py
illust2psd/utils/: download.py  image_utils.py  mask_utils.py  psd_utils.py
scripts/: download_models.py  evaluate.py
tests/: conftest.py  test_pipeline.py
